created the activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Top Tracer</string>
+    <string name="title_activity_top_tracer_welcome">TopTracerWelcomeActivity</string>
 </resources>
