--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">Top Tracer</string>
     <string name="title_activity_top_tracer_welcome">TopTracerWelcomeActivity</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="forgot_password">Forgot Password</string>
+    <string name="login">Login</string>
+    <string name="oops">Oops!</string>
+    <string name="ok">OK</string>
 </resources>
