--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="password">Password</string>
     <string name="forgot_password">Forgot Password</string>
     <string name="login">Login</string>
+    <string name="logout">Logout</string>
     <string name="oops">Oops!</string>
+    <string name="welcome_title">Welcome, toptracer!</string>
     <string name="ok">OK</string>
 </resources>
